<resources>
    <string name="app_name">LSB</string>
    <string name="facebook_app_id">1383050378716490</string>
    <string name="fb_login_protocol_scheme">fb1383050378716490</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="slogan">Let’s make it easy with BangBos</string>
    <string name="welcome_message">Welcome To Our App !</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">forget password ?</string>
    <string name="or_sign_in_with">Or sign in with :</string>
    <string name="don_t_have_account_sign_up">don\'t have account ? sign up</string>
    <string name="new_account">New Account</string>
    <string name="username">username</string>
    <string name="have_an_account_sign_in">you have already an account ? sign in</string>
    <string name="email_empty">Email must not be empty</string>
    <string name="username_empty">username must not be empty</string>
    <string name="password_empty">Password must not be empty</string>
    <string name="short_password">password should have more than 8 characters</string>
    <string name="invalid_password">password should contains at least a number and a special character</string>
    <string name="email_invalid">invalid email</string>
    <string name="Login_Failed">Login Failed</string>
    <string name="successfully_signed_up">successfully signed up !</string>
    <string name="email_badly_formatted">The email address is badly formatted.</string>
    <string name="email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_creating_account">error creating new account.</string>
    <string name="please_wait">Please wait …</string>
    <string name="connect_to_internet">please connect to the internet !</string>
    <string name="retry">Retry</string>
    <string name="user_does_not_exist">user does not exist, please sign up first !</string>
    <string name="wrong_password">wrong password</string>
    <string name="error_logged_in">error logged in</string>
    <string name="Error_recovering_password">Error recovering password</string>
    <string name="error_sending_email">Error sending email</string>
    <string name="error_sign_google">Authentication with google Failed.</string>
    <string name="recover_password">recover password</string>
    <string name="Recover">Recover</string>
    <string name="Cancel">Cancel</string>
    <string name="Email_sent">Email sent !</string>
    <string name="email_was_sent">an email was sent to : </string>
    <string name="error_sign_fb">Authentication with facebook Failed.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search ...</string>
    <string name="account_exists">An account already exists with the same email address</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="new_post">New Post</string>
    <string name="great_enjoy">Great ! enjoy your time !</string>
    <string name="new_follow">New Follow</string>
    <string name="starts_follow"> starts following you</string>
    <string name="new_like">New Like</string>
    <string name="like_post"> likes your post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="logout">Logout</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="update_password">Update Password</string>
    <string name="sure_delete_account">are you sure you want to delete this account ?</string>
    <string name="try_later">error please try later</string>
    <string name="need_permissions">we need those permissions</string>
    <string name="permission_settings">please apply permissions from settings</string>
    <string name="resign_in">Please resign in before doing this operation</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="dark_mode">Dark mode</string>
    <string name="edit_password">Edit password</string>
    <string name="delete_account">Delete account</string>
    <string name="your_password">Your Password</string>

</resources>